[delete compiled files]